--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,9 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xutility": "cpp",
-        "string": "cpp"
+        "string": "cpp",
+        "chrono": "cpp",
+        "map": "cpp",
+        "algorithm": "cpp"
     }
 }
